# parameter-golf

./: .gitignore  autoresearch.md  pyproject.toml  results.tsv  run_planc_local_1gpu.sh  train_gpt.py
docs/: plan.md  plan_b.md  plan_c.md
