[project]
name = "parameter-golf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets",
    "fonttools>=4.60.1",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "tqdm>=4.67.1",
    "sentencepiece",
]

[project.optional-dependencies]
cu128 = [
  "nvidia-cudnn-cu12>=9",
  "torch==2.9.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", extra = "cu128" }]
